rscp_communication_v3/rscp_comms/log/build_2025-07-29_16-33-48/rscp_receiver/stdout_stderr.log
running egg_info
creating ../../build/rscp_receiver/rscp_receiver.egg-info
writing ../../build/rscp_receiver/rscp_receiver.egg-info/PKG-INFO
writing dependency_links to ../../build/rscp_receiver/rscp_receiver.egg-info/dependency_links.txt
writing entry points to ../../build/rscp_receiver/rscp_receiver.egg-info/entry_points.txt
writing requirements to ../../build/rscp_receiver/rscp_receiver.egg-info/requires.txt
writing top-level names to ../../build/rscp_receiver/rscp_receiver.egg-info/top_level.txt
writing manifest file '../../build/rscp_receiver/rscp_receiver.egg-info/SOURCES.txt'
reading manifest file '../../build/rscp_receiver/rscp_receiver.egg-info/SOURCES.txt'
writing manifest file '../../build/rscp_receiver/rscp_receiver.egg-info/SOURCES.txt'
running build
running build_py
creating /home/revel34/rscp_communication_v3/rscp_comms/build/rscp_receiver/build
creating /home/revel34/rscp_communication_v3/rscp_comms/build/rscp_receiver/build/lib
creating /home/revel34/rscp_communication_v3/rscp_comms/build/rscp_receiver/build/lib/rscp_receiver
copying rscp_receiver/receiver.py -> /home/revel34/rscp_communication_v3/rscp_comms/build/rscp_receiver/build/lib/rscp_receiver
copying rscp_receiver/__init__.py -> /home/revel34/rscp_communication_v3/rscp_comms/build/rscp_receiver/build/lib/rscp_receiver
running install
running install_lib
creating /home/revel34/rscp_communication_v3/rscp_comms/install/rscp_receiver/lib/python3.10/site-packages/rscp_receiver
copying /home/revel34/rscp_communication_v3/rscp_comms/build/rscp_receiver/build/lib/rscp_receiver/receiver.py -> /home/revel34/rscp_communication_v3/rscp_comms/install/rscp_receiver/lib/python3.10/site-packages/rscp_receiver
copying /home/revel34/rscp_communication_v3/rscp_comms/build/rscp_receiver/build/lib/rscp_receiver/__init__.py -> /home/revel34/rscp_communication_v3/rscp_comms/install/rscp_receiver/lib/python3.10/site-packages/rscp_receiver
byte-compiling /home/revel34/rscp_communication_v3/rscp_comms/install/rscp_receiver/lib/python3.10/site-packages/rscp_receiver/receiver.py to receiver.cpython-310.pyc
byte-compiling /home/revel34/rscp_communication_v3/rscp_comms/install/rscp_receiver/lib/python3.10/site-packages/rscp_receiver/__init__.py to __init__.cpython-310.pyc
  File "/home/revel34/rscp_communication_v3/rscp_comms/install/rscp_receiver/lib/python3.10/site-packages/rscp_receiver/receiver.py", line 1
    print(Hello World!)
          ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

running install_data
creating /home/revel34/rscp_communication_v3/rscp_comms/install/rscp_receiver/share/ament_index
creating /home/revel34/rscp_communication_v3/rscp_comms/install/rscp_receiver/share/ament_index/resource_index
creating /home/revel34/rscp_communication_v3/rscp_comms/install/rscp_receiver/share/ament_index/resource_index/packages
copying resource/rscp_receiver -> /home/revel34/rscp_communication_v3/rscp_comms/install/rscp_receiver/share/ament_index/resource_index/packages
copying package.xml -> /home/revel34/rscp_communication_v3/rscp_comms/install/rscp_receiver/share/rscp_receiver
running install_egg_info
Copying ../../build/rscp_receiver/rscp_receiver.egg-info to /home/revel34/rscp_communication_v3/rscp_comms/install/rscp_receiver/lib/python3.10/site-packages/rscp_receiver-0.0.0-py3.10.egg-info
running install_scripts
writing list of installed files to '/home/revel34/rscp_communication_v3/rscp_comms/build/rscp_receiver/install.log'
